--- a/src/index.css
+++ b/src/index.css
@@ -3,38 +3,28 @@
 @tailwind utilities;
 
 @layer components {
-  .App {
-    @apply bg-red-900 font-extrabold text-center
-  }
-
-  ul>li{
+  ul>li {
     @apply mx-3 text-xl p-3 tracking-widest duration-500
-  }
-  .navlink {
-    @apply text-lg sm:text-xl p-3 tracking-widest duration-500
-  }
-
-  .header {
-    @apply flex flex-col justify-center items-center my-3
-  }
-
-  .btn {
-    @apply bg-black text-white border-none flex items-center px-6 py-3 my-2 rounded-2xl
   }
 }
 
-.show{
+.show {
   box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
-.showw{
+.showw {
   box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
-.frame{
+.frame {
   box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
   background: linear-gradient(126deg,
       rgba(2, 0, 36, 1) 0%,
       rgb(241, 136, 44) 50%,
       rgba(2, 0, 36, 1) 105%)
+}
+
+.style {
+  color: #252839;
+  -webkit-text-stroke: 0.2vw #383d52;
 }
