add css update on page

--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,11 @@
   color: #252839;
   -webkit-text-stroke: 0.2vw #383d52;
 }
+.stylee {
+  color: #252839;
+  -webkit-text-stroke: 0.1vw rgb(167, 173, 180);
+}
+
+.family{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
